start luz section

--- a/torch/torch.html
+++ b/torch/torch.html
@@ -127,10 +127,7 @@ $(document).ready(function () {
 <h3><code>luz</code></h3>
 <p>What <code>keras</code> is to <code>tensorflow</code> – a high-level API streamlining and instrumenting the training process – <code>luz</code> is to <code>torch</code>. While everything can be accomplished with <code>torch</code> alone, <code>luz</code></p>
 <ul>
-<li>provides a <em>keras</em>-like, declarative interface to the training process</li>
-</ul>
-<!-- -->
-<ul>
+<li><p>provides a <em>keras</em>-like, declarative interface to the training process</p></li>
 <li><p>removes boilerplate code</p></li>
 <li><p>keeps track of <em>metrics</em> commonly used in data science, and allows you to define your own</p></li>
 <li><p>provides a set of ready-to-use <em>callbacks</em> to control training, save model state, and more</p></li>
@@ -142,9 +139,6 @@ $(document).ready(function () {
 <ul>
 <li><p><a href="https:/github.com/mlverse/torch">torch</a></p></li>
 <li><p><a href="https:/github.com/mlverse/luz">luz</a></p></li>
-</ul>
-<!-- -->
-<ul>
 <li><p><a href="https:/github.com/mlverse/torchvision">torchvision</a></p></li>
 <li><p><a href="https:/github.com/mlverse/torchdatasets">torchdatasets</a></p></li>
 <li><p><a href="https:/github.com/mlverse/tabnet">tabnet</a></p></li>
@@ -781,26 +775,26 @@ for (t in 1:200) {
   # update weights 
   optimizer$step()
 }</code></pre>
-<pre><code>Epoch:  10    Loss:  88.80984 
-Epoch:  20    Loss:  69.3958 
-Epoch:  30    Loss:  56.65308 
-Epoch:  40    Loss:  49.76519 
-Epoch:  50    Loss:  45.6286 
-Epoch:  60    Loss:  42.66672 
-Epoch:  70    Loss:  39.94653 
-Epoch:  80    Loss:  37.83141 
-Epoch:  90    Loss:  35.77494 
-Epoch:  100    Loss:  37.79589 
-Epoch:  110    Loss:  33.46783 
-Epoch:  120    Loss:  30.6449 
-Epoch:  130    Loss:  29.40314 
-Epoch:  140    Loss:  30.53696 
-Epoch:  150    Loss:  26.80095 
-Epoch:  160    Loss:  24.74072 
-Epoch:  170    Loss:  23.38534 
-Epoch:  180    Loss:  30.33939 
-Epoch:  190    Loss:  22.27186 
-Epoch:  200    Loss:  20.96137 </code></pre>
+<pre><code>Epoch:  10    Loss:  111.7544 
+Epoch:  20    Loss:  95.16553 
+Epoch:  30    Loss:  86.7681 
+Epoch:  40    Loss:  79.3247 
+Epoch:  50    Loss:  72.8399 
+Epoch:  60    Loss:  70.79742 
+Epoch:  70    Loss:  64.10333 
+Epoch:  80    Loss:  62.41299 
+Epoch:  90    Loss:  58.99478 
+Epoch:  100    Loss:  55.81212 
+Epoch:  110    Loss:  53.2128 
+Epoch:  120    Loss:  51.17919 
+Epoch:  130    Loss:  51.05095 
+Epoch:  140    Loss:  48.91762 
+Epoch:  150    Loss:  47.21458 
+Epoch:  160    Loss:  48.1699 
+Epoch:  170    Loss:  46.42484 
+Epoch:  180    Loss:  44.66676 
+Epoch:  190    Loss:  43.92128 
+Epoch:  200    Loss:  42.75381 </code></pre>
 <script type="application/json" data-opts-chunk="1">{"fig.width":6.5,"fig.height":4,"fig.retina":2,"fig.align":"default","fig.keep":"high","fig.show":"asis","out.width":624,"warning":true,"error":false,"message":true,"exercise.df_print":"paged","exercise.checker":"NULL"}</script>
 </div>
 
