--- a/torch/torch.html
+++ b/torch/torch.html
@@ -121,7 +121,7 @@ $(document).ready(function () {
 <div id="section-torch" class="section level3">
 <h3><code>torch</code></h3>
 <p><a href="http:/torch.mlverse.org"><code>torch</code></a> is an <em>R-native</em> framework for fast array computation with automatic differentiation and rich neural-network functionality.</p>
-<p>TBD pic</p>
+<p><img src="images/torch_arch.png" /></p>
 </div>
 <div id="section-luz" class="section level3">
 <h3><code>luz</code></h3>
@@ -779,26 +779,26 @@ for (t in 1:200) {
   # update weights 
   optimizer$step()
 }</code></pre>
-<pre><code>Epoch:  10    Loss:  95.68806 
-Epoch:  20    Loss:  74.20985 
-Epoch:  30    Loss:  64.90022 
-Epoch:  40    Loss:  58.3171 
-Epoch:  50    Loss:  53.49242 
-Epoch:  60    Loss:  50.39787 
-Epoch:  70    Loss:  46.93485 
-Epoch:  80    Loss:  44.58778 
-Epoch:  90    Loss:  42.42317 
-Epoch:  100    Loss:  41.79988 
-Epoch:  110    Loss:  40.65214 
-Epoch:  120    Loss:  40.8122 
-Epoch:  130    Loss:  36.67589 
-Epoch:  140    Loss:  43.32238 
-Epoch:  150    Loss:  36.50988 
-Epoch:  160    Loss:  34.36979 
-Epoch:  170    Loss:  32.21666 
-Epoch:  180    Loss:  32.02039 
-Epoch:  190    Loss:  39.56268 
-Epoch:  200    Loss:  30.95239 </code></pre>
+<pre><code>Epoch:  10    Loss:  77.40842 
+Epoch:  20    Loss:  58.31374 
+Epoch:  30    Loss:  51.68374 
+Epoch:  40    Loss:  47.50186 
+Epoch:  50    Loss:  43.13593 
+Epoch:  60    Loss:  39.72246 
+Epoch:  70    Loss:  44.48895 
+Epoch:  80    Loss:  38.05459 
+Epoch:  90    Loss:  34.08207 
+Epoch:  100    Loss:  32.42054 
+Epoch:  110    Loss:  30.59437 
+Epoch:  120    Loss:  28.9991 
+Epoch:  130    Loss:  27.83577 
+Epoch:  140    Loss:  28.93335 
+Epoch:  150    Loss:  27.18974 
+Epoch:  160    Loss:  25.47563 
+Epoch:  170    Loss:  27.06833 
+Epoch:  180    Loss:  25.83946 
+Epoch:  190    Loss:  28.21229 
+Epoch:  200    Loss:  25.35605 </code></pre>
 <script type="application/json" data-opts-chunk="1">{"fig.width":6.5,"fig.height":4,"fig.retina":2,"fig.align":"default","fig.keep":"high","fig.show":"asis","out.width":624,"warning":true,"error":false,"message":true,"exercise.df_print":"paged","exercise.checker":"NULL"}</script>
 </div>
 </div>
@@ -823,7 +823,7 @@ Epoch:  200    Loss:  30.95239 </code></pre>
 <li><p><code>dataset</code>: Return a single training (or validation, or test) item (in supervised learning, a list of input and target). Optionally, take care of any pre-processing required.</p></li>
 <li><p><code>dataloader</code>: Feed the data to the model. Normally, this happens in <em>batches</em> of configurable size. Optionally, a <code>dataloader</code> may shuffle the data, and arrange for parallelization over a subset of available processors.</p></li>
 </ul>
-<p><code>torchvision</code> comes with a few image datasets, requestable via <code>xxx_dataset()</code>. They will be downloaded and prepared the first time they’re instantiated (unless the data exist already in the specified location.</p>
+<p><code>torchvision</code> comes with a few image datasets, requestable via <code>xxx_dataset()</code>. They will be downloaded and prepared the first time they’re instantiated (unless the data exist already in the specified location).</p>
 <p>Since we don’t really need the full MNIST dataset for this demonstration, we only prepare the test split (indicated by the line <code>train = FALSE</code> below). We’ll split it up manually into training and validation parts in a minute.</p>
 <p>In the dataset constructor, the argument <code>transform =</code> serves to tell <code>torch</code> how the images should be pre-processed.</p>
 <pre class="r"><code>dir &lt;- &quot;~/Downloads/mnist&quot; 
@@ -971,12 +971,12 @@ copy &lt;- luz_load(&quot;mnist-cnn.pt&quot;)</code></pre>
 </div>
 <div id="section-exercise-creating-a-custom-metric" class="section level3">
 <h3>Exercise: Creating a custom metric</h3>
-<p>While <code>luz</code> provides a great number of metrics, you can easily implement your own if needed. <em>Metric</em> objects keep running aggregates of the indicator. in question. At each epoch, aggregates are re-initialized to their starting values (zero, in most cases).</p>
+<p>While <code>luz</code> provides a great number of metrics, you can easily implement your own if needed. <em>Metric</em> objects keep running aggregates of the indicator in question. At each epoch, aggregates are re-initialized to their starting values (zero, in most cases).</p>
 <p>A <code>luz</code> metric is an R6 object with three methods:</p>
 <ul>
 <li><p><code>initialize()</code>, used to define the starting values for every variable to keep track of;</p></li>
 <li><p><code>update()</code>, telling <code>luz</code> how to update these variables at every training (validation, resp.) step; and</p></li>
-<li><p><code>compute()</code>, used to define the indicator to be outputted to the user.</p></li>
+<li><p><code>compute()</code>, used to define the indicator to be returned to the user.</p></li>
 </ul>
 <p>Below, you’ll be tasked to implement accuracy yourself. Here is an outline of what’s to be done:</p>
 <pre class="r"><code>my_accuracy &lt;- luz_metric(
@@ -992,7 +992,7 @@ copy &lt;- luz_load(&quot;mnist-cnn.pt&quot;)</code></pre>
   },
  
   update = function(preds, target) {
-    # 1: use pred (function input no. 1) to compute the indices of the most likely class (for the complete batch)
+    # 1: use pred (function argument no. 1) to compute the indices of the most likely class (for the complete batch)
     # pred &lt;- 
     
     # 2: update self$correct: add number of correct predictions
@@ -1095,7 +1095,7 @@ cmp %&gt;% autoplot()</code></pre>
 <h3>Time-series forecasting with deep learning in a nutshell</h3>
 <p>In a linear model, individual observations are independent. Their order does not matter. The same holds for sets of images (not the pixels <em>in</em> an image, though).</p>
 <p>But with sequences, such as spoken language or consecutive-in-time measurements, the order is essential. We thus need neural network models that respect sequentiality.</p>
-<p>Traditionally, the type of data we’re talking about has been the domain of <em>recurrent neural networks</em> (RNNs). They are called <em>recurrent</em> because, in addition to handling a new batch item at every [processing] time step, they keep – and continuously update – an internal state. This is often referred to as the <em>hidden</em> <em>state</em>.</p>
+<p>Traditionally, the type of data we’re talking about has been the domain of <em>recurrent neural networks</em> (RNNs). They are called <em>recurrent</em> because, in addition to handling a new batch item at every (training) time step, they keep – and continuously update – an internal state. This is often referred to as the <em>hidden</em> <em>state</em>.</p>
 <p>In this family of RNNs, the most-established model architectures are <em>Gated Recurrent Unit</em> (GRU) and <em>Long Short-Term Memory</em> (LSTM). LSTM differs from GRU in that it keeps an additional internal state, sometimes called <em>cell state</em>, that is said to enable it to keep longer-term remembrances. In this tutorial, we use GRUs only, but adapting the code for LSTM is a manageable effort.</p>
 <p>For RNNs to learn temporal dependencies, the data need to be prepared in a way that each batch item contains information about several time steps. Let’s see how that works.</p>
 </div>
@@ -1369,7 +1369,7 @@ valid_ds &lt;- elec_dataset(elec_valid, n_timesteps, n_forecast)</code></pre>
 <pre class="r"><code>length(train_ds)
 train_ds[1]</code></pre>
 <p>work correctly.</p>
-<p>To proceed to the next step, you’ll also need to recreate the dataloaders.</p>
+<p>To proceed to the next step, you’ll also need to recreate the <code>dataloader</code>s.</p>
 <pre class="r"><code>batch_size &lt;- 32
 train_dl &lt;- train_ds %&gt;% dataloader(batch_size = batch_size, shuffle = TRUE)
 
@@ -1622,7 +1622,7 @@ output$`tutorial-exercise-multi-step-fit-output` <- renderUI({
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98]}},"value":[{"type":"character","attributes":{},"value":["anytime","assertthat","backports","base","bit","bit64","broom","bslib","callr","cellranger","cli","colorspace","compiler","coro","crayon","datasets","DBI","dbplyr","digest","distributional","dplyr","ellipsis","evaluate","fable","fabletools","fansi","farver","fastmap","feasts","forcats","fs","generics","ggplot2","glue","graphics","grDevices","grid","gtable","haven","hms","htmltools","htmlwidgets","httpuv","httr","jquerylib","jsonlite","knitr","later","learnr","lifecycle","lubridate","luz","magrittr","markdown","methods","mime","modelr","munsell","pillar","pkgconfig","processx","promises","ps","purrr","R6","Rcpp","readr","readxl","reprex","rlang","rmarkdown","rprojroot","rstudioapi","rvest","sass","scales","shiny","stats","stringi","stringr","tibble","tidyr","tidyselect","tidyverse","tools","torch","torchvision","tsibble","tsibbledata","utf8","utils","vctrs","withr","xfun","xml2","xtable","yaml","zeallot"]},{"type":"character","attributes":{},"value":["0.3.9","0.2.1","1.2.1","4.0.5","4.0.4","4.0.5","0.7.6","0.2.5.1","3.7.0","1.1.0","2.5.0","2.0-1","4.0.5","1.0.1","1.4.1","4.0.5","1.1.1","2.1.1","0.6.27","0.2.2","1.0.6","0.3.2","0.14","0.3.1","0.3.1","0.5.0","2.1.0","1.1.0","0.2.1","0.5.1","1.5.0","0.1.0","3.3.3","1.4.2","4.0.5","4.0.5","4.0.5","0.3.0","2.4.1","1.1.0","0.5.1.1","1.5.3","1.6.1","1.4.2","0.1.4","1.7.2","1.33","1.2.0","0.10.1","1.0.0","1.7.10","0.0.0.9000","2.0.1","1.1","4.0.5","0.10","0.1.8","0.5.0","1.6.1","2.0.3","3.5.2","1.2.0.1","1.6.0","0.3.4","2.5.0","1.0.6","1.4.0","1.3.1","2.0.0","0.4.11","2.8","2.0.2","0.13","1.0.0","0.4.0","1.1.1","1.6.0","4.0.5","1.6.2","1.4.0","3.1.2","1.1.3","1.1.1","1.3.1","4.0.5","0.3.0.9002","0.3.0.9000","1.0.1","0.3.0","1.2.1","4.0.5","0.3.8","2.4.2","0.23","1.3.2","1.8-4","2.2.1","0.1.0"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98]}},"value":[{"type":"character","attributes":{},"value":["anytime","assertthat","backports","base","bit","bit64","broom","bslib","callr","cellranger","cli","colorspace","compiler","coro","crayon","datasets","DBI","dbplyr","digest","distributional","dplyr","ellipsis","evaluate","fable","fabletools","fansi","farver","fastmap","feasts","forcats","fs","generics","ggplot2","glue","graphics","grDevices","grid","gtable","haven","hms","htmltools","htmlwidgets","httpuv","httr","jquerylib","jsonlite","knitr","later","learnr","lifecycle","lubridate","luz","magrittr","markdown","methods","mime","modelr","munsell","pillar","pkgconfig","processx","promises","ps","purrr","R6","Rcpp","readr","readxl","reprex","rlang","rmarkdown","rprojroot","rstudioapi","rvest","sass","scales","shiny","stats","stringi","stringr","tibble","tidyr","tidyselect","tidyverse","tools","torch","torchvision","tsibble","tsibbledata","utf8","utils","vctrs","withr","xfun","xml2","xtable","yaml","zeallot"]},{"type":"character","attributes":{},"value":["0.3.9","0.2.1","1.2.1","4.0.5","4.0.4","4.0.5","0.7.6","0.2.5.1","3.7.0","1.1.0","2.5.0","2.0-1","4.0.5","1.0.1","1.4.1","4.0.5","1.1.1","2.1.1","0.6.27","0.2.2","1.0.6","0.3.2","0.14","0.3.1","0.3.1","0.5.0","2.1.0","1.1.0","0.2.1","0.5.1","1.5.0","0.1.0","3.3.3","1.4.2","4.0.5","4.0.5","4.0.5","0.3.0","2.4.1","1.1.0","0.5.1.1","1.5.3","1.6.1","1.4.2","0.1.4","1.7.2","1.33","1.2.0","0.10.1","1.0.0","1.7.10","0.0.0.9000","2.0.1","1.1","4.0.5","0.10","0.1.8","0.5.0","1.6.1","2.0.3","3.5.2","1.2.0.1","1.6.0","0.3.4","2.5.0","1.0.6","1.4.0","1.3.1","2.0.0","0.4.11","2.8","2.0.2","0.13","1.0.0","0.4.0","1.1.1","1.6.0","4.0.5","1.6.2","1.4.0","3.1.2","1.1.3","1.1.1","1.3.1","4.0.5","0.3.0.9004","0.3.0.9000","1.0.1","0.3.0","1.2.1","4.0.5","0.3.8","2.4.2","0.23","1.3.2","1.8-4","2.2.1","0.1.0"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
