--- a/torch/torch.html
+++ b/torch/torch.html
@@ -342,7 +342,7 @@ t1
 t2</code></pre>
 </div>
 <ol start="2" style="list-style-type: decimal">
-<li>Multiply the matrices, sum over all elements, and take the square root:</li>
+<li>Multiply the matrices, square all elements, sum them, and take the square root:</li>
 </ol>
 <div class="tutorial-exercise" data-label="tensors2" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>(m1 %*% m2)^2 %&gt;% sum() %&gt;% sqrt()</code></pre>
@@ -779,26 +779,26 @@ for (t in 1:200) {
   # update weights 
   optimizer$step()
 }</code></pre>
-<pre><code>Epoch:  10    Loss:  77.40842 
-Epoch:  20    Loss:  58.31374 
-Epoch:  30    Loss:  51.68374 
-Epoch:  40    Loss:  47.50186 
-Epoch:  50    Loss:  43.13593 
-Epoch:  60    Loss:  39.72246 
-Epoch:  70    Loss:  44.48895 
-Epoch:  80    Loss:  38.05459 
-Epoch:  90    Loss:  34.08207 
-Epoch:  100    Loss:  32.42054 
-Epoch:  110    Loss:  30.59437 
-Epoch:  120    Loss:  28.9991 
-Epoch:  130    Loss:  27.83577 
-Epoch:  140    Loss:  28.93335 
-Epoch:  150    Loss:  27.18974 
-Epoch:  160    Loss:  25.47563 
-Epoch:  170    Loss:  27.06833 
-Epoch:  180    Loss:  25.83946 
-Epoch:  190    Loss:  28.21229 
-Epoch:  200    Loss:  25.35605 </code></pre>
+<pre><code>Epoch:  10    Loss:  98.00224 
+Epoch:  20    Loss:  83.34789 
+Epoch:  30    Loss:  73.32167 
+Epoch:  40    Loss:  63.78309 
+Epoch:  50    Loss:  56.94036 
+Epoch:  60    Loss:  57.7351 
+Epoch:  70    Loss:  50.0152 
+Epoch:  80    Loss:  44.02956 
+Epoch:  90    Loss:  40.27573 
+Epoch:  100    Loss:  38.44748 
+Epoch:  110    Loss:  35.70034 
+Epoch:  120    Loss:  35.81842 
+Epoch:  130    Loss:  34.5412 
+Epoch:  140    Loss:  31.31835 
+Epoch:  150    Loss:  28.56025 
+Epoch:  160    Loss:  27.58221 
+Epoch:  170    Loss:  26.65957 
+Epoch:  180    Loss:  26.27227 
+Epoch:  190    Loss:  26.4375 
+Epoch:  200    Loss:  26.03418 </code></pre>
 <script type="application/json" data-opts-chunk="1">{"fig.width":6.5,"fig.height":4,"fig.retina":2,"fig.align":"default","fig.keep":"high","fig.show":"asis","out.width":624,"warning":true,"error":false,"message":true,"exercise.df_print":"paged","exercise.checker":"NULL"}</script>
 </div>
 </div>
